Fixed document server must be uri encoded